--- a/interactiveForm/index.html
+++ b/interactiveForm/index.html
@@ -35,6 +35,7 @@
           <option value="student">Student</option>
           <option value="other">Other</option>
         </select>
+        <label id="newlabel">Other Job Role:<label><br><input id="newid" type="text">
       </fieldset>
 
       <fieldset class="shirt">
