--- a/interactiveForm/index.html
+++ b/interactiveForm/index.html
@@ -15,7 +15,7 @@
       <h1>Full Stack Conf</h1>
     </header>
 
-    <form action="index.html" method="post">
+    <form action="names.html" method="POST">
 
       <fieldset>
         <legend>Basic Info</legend>
